--- a/app/assets/stylesheets/alchemy/pagination.scss
+++ b/app/assets/stylesheets/alchemy/pagination.scss
@@ -12,7 +12,7 @@
   padding-left: 76px;
   text-align: left;
   border-top: $default-border;
-  z-index: 1;
+  z-index: 10;
 
   a, span, em {
     font-size: $default-font-size;
